(#3702) pronunciation block wrapping fix
- the height applied to pronunciation was causing overflow issues; removed explicit height
- applied similar padding to term to audio icon

--- a/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/app-module/app-module-legacy.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/app-module/app-module-legacy.scss
@@ -17,8 +17,11 @@
 		height: initial;
 		width: 30px;
 	}
+
 	.pronunciation {
-		height: 42px;
+    .pronunciation__audio {
+      padding-top: 4px;
+    }
 		.pronunciation__term {
 			margin-right: 5px;
 		}
@@ -26,8 +29,10 @@
 		.pronunciation__key {
 			margin-left: 10px;
 			padding-top: 4px;
+      padding-bottom: 4px;
 		}
 	}
+
 
 	.dictionary-list-container {
 		.dictionary-list{
